# multi_click_example

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
multi_click_example/: main.py
